# hello_qt

./: .gitignore  CMakeLists.txt  build.sh  choose_file_process_window.cpp  choose_file_process_window.h  choose_file_test.cpp  hello_qt_button.cpp  hello_qt_button.h  hello_qt_text.cpp  hello_world.cpp  unit_test.cpp  unit_test.h
cmake/: config.cmake.in
